--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "prettier": "^3.0.0",
     "rimraf": "^5.0.7",
     "serverless-bundle": "^6.1.0",
+    "serverless-dotenv-plugin": "^6.0.0",
     "serverless-esbuild": "^1.52.1",
     "serverless-layers": "^2.8.5",
     "serverless-plugin-common-excludes": "^4.0.0",
